Latest adjustment (Small fix and changes)

--- a/Vision&Mission.html
+++ b/Vision&Mission.html
@@ -203,7 +203,7 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
         <div class="container px-4 px-lg-5">
-            <a class="navbar-brand" href="#page-top"><img src="assets/img/kidocode_icon.png" class="me-2"
+            <a class="navbar-brand" href="index.html#page-top"><img src="assets/img/kidocode_icon.png" class="me-2"
                     height="30px" alt="kidohelp">KidoHelp</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
@@ -253,7 +253,7 @@
                         kids in need. Join us in driving toward a brighter, more inclusive
                         future.
                     </p>
-                    <a class="btn btn-primary btn-xl" href="#vision">Scroll down for knowing our goals</a>
+                    <a class="btn btn-primary btn-xl" href="#vision">Click here for knowing our goals</a>
                 </div>
             </div>
         </div>
@@ -306,6 +306,7 @@
               </ol>
               <p class="text-white-75">Our plans focus on building sustainable and impactful solutions for children's well-being.</p>
               <br>
+              <iframe width="600" height="315" src="https://www.youtube.com/embed/yyHxA3cOVXQ?si=kczOC3qDcNYVv4Iu" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             </section>
             <hr style="border: 5px solid red; width: 100%; margin: 0 auto;" />
             <section id="Join-Us"><br><br><br><br>
