--- a/faq.html
+++ b/faq.html
@@ -46,7 +46,7 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top py-3" id="mainNav">
         <div class="container px-4 px-lg-5">
-            <a class="navbar-brand" href="#page-top"><img src="assets/img/kidocode_icon.png" class="me-2"
+            <a class="navbar-brand" href="index.html#page-top"><img src="assets/img/kidocode_icon.png" class="me-2"
                     height="30px" alt="kidohelp">KidoHelp</a>
             <button class="navbar-toggler navbar-toggler-right" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
