Some sentences adjustment and new customization

--- a/index.html
+++ b/index.html
@@ -219,29 +219,28 @@
 
             /* Gradient 1: Sunset Vibes */
             .bg-gradient-1 {
-                background: linear-gradient(to right, #f9d423, #ff4e50); /* Bright Yellow to Red */
+                background: linear-gradient(to right, #126DF2, #EE3F36); /* Blue to Red */
                 border-radius: 10px;
                 animation: changeGradientColorSmooth 10s ease-in-out infinite;
             }
 
             @keyframes changeGradientColorSmooth {
                 0% {
-                    background: linear-gradient(to right, #f9d423, #ff4e50); /* Bright Yellow to Red */
+                    background: linear-gradient(to right, #126DF2, #EE3F36); /* Blue to Red */
                 }
                 25% {
-                    background: linear-gradient(to right, #FF6F61, #FF4E50); /* Coral to Red */
+                    background: linear-gradient(to right, #ff931E, #ffc700); /* Orange to Yellow */
                 }
                 50% {
-                    background: linear-gradient(to right, #06BDFC, #FF6F61); /* Blue to Coral */
+                    background: linear-gradient(to right, #EE3F36, #126DF2); /* Red to Blue */
                 }
                 75% {
-                    background: linear-gradient(to right, #FF6F61, #f9d423); /* Coral to Bright Yellow */
+                    background: linear-gradient(to right, #ffc700, #ff931E); /* Yellow to Orange */
                 }
                 100% {
-                    background: linear-gradient(to right, #f9d423, #ff4e50); /* Back to Bright Yellow to Red */
+                    background: linear-gradient(to right, #126DF2, #EE3F36); /* Back to Blue to Red */
                 }
             }
-
 
             /* Gradient 2: Ocean Breeze */
             .bg-gradient-2 {
